--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   unicorndial: "^1.0.9"
   share: "^0.5.2"
   google_sign_in: "^3.0.4"
+  cloud_firestore: "^0.7.3"
+  firebase_auth: "^0.5.12"
+
 
 dev_dependencies:
   flutter_test:
